# my_first_docker_cmake_helloworld

./: CMakeLists.txt  README.md  build_run.bat  dockerfile  main.c
src/print/: print.c  print.h
